--- a/src/styles.css
+++ b/src/styles.css
@@ -227,8 +227,26 @@ main, .Descargar-proyecto, .footer {
     transform: translateY(-50%);
 }
 
-main{
-    padding: 2rem;
+/* Ajustar el margen superior para separar el gráfico de otros elementos */
+.main-graph {
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     text-align: center;
-    margin-top: 120px auto;
+    margin: 120px auto 0; /* Margen superior de 120px y centrado horizontal */
+    width: 80%; /* Hacer que el gráfico ocupe el 80% del ancho */
+}
+
+/* Ajustar el gráfico para que se ajuste a su contenedor */
+.myChart {
+    width: 100%;
+    height: 400px; /* Ajusta la altura según sea necesario */
+    max-width: 100%; /* Asegura que no sobrepase el contenedor */
+}
+
+/* Mantener los botones dentro del contenedor */
+.filter-buttons {
+    margin-top: 20px; /* Puedes ajustar este valor según lo que necesites */
 }
