--- a/src/styles.css
+++ b/src/styles.css
@@ -149,7 +149,7 @@ main {
 }
 
 /* Media query para pantallas pequeñas */
-@media (max-width: 1000px) {
+@media (max-width: 1100px) {
     .menu-logo {
         flex: 1;
         justify-content: space-evenly;
@@ -781,6 +781,7 @@ hr {
     display: flex;
     height: calc(95vh - 50px); /* Ajusta la altura para que no cubra el header */
     margin-bottom: 0px;
+    max-height: calc(95vh - 50px); /* Ajusta la altura para que no cubra el header */
 }
 
 .sidebar {
@@ -793,6 +794,7 @@ hr {
     color: var(--blanco);
     padding: 20px;
     overflow-y: auto;
+    max-height: calc(95vh - 50px); /* Ajusta la altura para que no cubra el header */
 }
 
 .sidebar h2 {
@@ -811,6 +813,7 @@ hr {
     border-radius: 10px;
     padding: 10px;
     transition: transform 0.2s ease;
+    overflow: auto;
 }
 
 .topic:hover {
@@ -839,6 +842,7 @@ hr {
     margin-right: 20px;
     border: #d07f4a solid 5px;
     border-radius: 15px;
+    max-height: calc(95vh - 50px - 75px); /* La altura del contenedor de mensajes */
 }
 
 .chat-header {
@@ -861,6 +865,7 @@ hr {
 
 .message {
     max-width: 80%;
+    min-width: 20%;
     padding: 10px 15px;
     border-radius: 10px;
     position: relative;
@@ -905,9 +910,9 @@ hr {
 
 .message-form {
     display: flex;
-    border-top: 1px solid #ccc;
     padding: 10px;
-    background-color: #fafafa;
+    background-color: #1E1E1E;
+    color: var(--blanco);
 }
 
 .message-form input {
@@ -917,12 +922,15 @@ hr {
     border: 1px solid #ccc;
     border-radius: 6px;
     margin-right: 10px;
+    background-color: #2b2b2b;
+    color: var(--blanco);
+    transition: border-color 0.3s, box-shadow 0.3s;
 }
 
 .message-form button {
     padding: 10px 20px;
     background-color: #4caf50;
-    color: white;
+    color: var(--blanco);
     border: none;
     border-radius: 6px;
     cursor: pointer;
